--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.bgsection1{
-    background: url(/public/img/bgsection1.png);
-    background-position: center;
-    background-size: cover;
-}
+
 .areabg{
     background-image: url(/public/img/asset26.png);
 }
@@ -17,3 +13,39 @@
 .boxShadow:hover{
     box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.25);
 }
+
+
+.swiper-button-next {
+  color: #e96f2d; 
+  font-size: 18px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border:2px solid #e96f2d;
+  border-radius: 50%;
+}
+.swiper-button-next {
+    right: 10px; 
+  }
+
+
+
+.swiper-button-prev {
+    color: #e96f2d; 
+    font-size: 18px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border:2px solid #e96f2d;
+    border-radius: 50%;
+  }
+
+.swiper-button-prev {
+  left: 10px; 
+}
+
+
